# Intelbot

./: .env.example  .gitignore  ARXIV_ANALYSIS.md  ARXIV_IMPROVEMENTS.md  BUG_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DIGEST_ASSESSMENT.md  GITIGNORE_ASSESSMENT.md  IMPROVEMENTS_IMPLEMENTED.md  README.md  SCHEDULING.md  TASK_LIST.md  VALIDATION_SUMMARY.md  com.leegonzales.research-agent.plist  com.leegonzales.research-agent.plist.example  config.yaml.example  pyproject.toml  schedule.sh
.beads/: RA.db
.github/ISSUE_TEMPLATE/: 01-implement-logging-system.md  02-add-retry-logic.md  03-validate-api-keys.md  04-check-sqlite-fts5.md  05-fix-database-constraints.md  06-standardize-path-expansion.md  07-improve-dotdict-robustness.md  08-optimize-filter-new-performance.md  09-fix-item-run-linking.md  10-fix-bm25-normalization.md
docs/: BLOG_SCRAPER_ENHANCEMENTS.md  PROJECT_STATE.md  RSS_FEED_VERIFICATION.md  SESSION_2_COMPLETE.md
docs/project-state/: README.md
docs/project-state/issues/: INDEX.md  NEW_ISSUES.md  SESSION_FIXES_2025-11-15.md
docs/project-state/issues/critical/: 01-logging.md  02-retry.md  03-api-keys.md  04-fts5.md  05-constraints.md
docs/project-state/issues/high-priority/: 08-performance.md
docs/project-state/sprints/: SPRINT_001.md  SPRINT_002_PLAN.md
docs/project-state/status/: SPRINT.md
docs/project-state/tests/: TESTING.md
prompts/: sources.example.md  synthesis.example.md  synthesis.md  system.example.md  system.md
research_agent/: __main__.py
research_agent/agents/: source_agent.py  synthesis_agent.py
research_agent/cli/: main.py
research_agent/core/: config.py  orchestrator.py  prompts.py
research_agent/output/: digest_writer.py
research_agent/scheduler/: launchd.py
research_agent/sources/: arxiv.py  base.py  blog_scraper.py  changelog.py  hackernews.py  openreview.py  rss.py  semantic_scholar.py  web_search.py
research_agent/storage/: schema.sql  state.py
research_agent/storage/migrations/: 001_initial.py  002_add_qc_results.py  002_author_performance.py  __init__.py
research_agent/utils/: authors.py  logger.py  priority_authors.py  retry.py  scoring.py  slop_detector.py  substack_themes.py  text.py
scripts/: install.sh
tests/: conftest.py  test_state.py
tests/unit/: test_logger.py  test_retry.py
tests/unit/sources/: test_web_search.py
