[tool.poetry]
name = "research-agent"
version = "1.0.0"
description = "Autonomous AI research tracking agent"
authors = ["Lee Gonzales <lee@catalystai.services>"]
readme = "README.md"
packages = [{include = "research_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.75.0"
click = "^8.1.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
feedparser = "^6.0.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
arxiv = "^2.1.0"
lxml = "^5.1.0"
python-dateutil = "^2.8.2"
openreview-py = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
responses = "^0.23.0"
freezegun = "^1.2.2"
faker = "^19.0.0"
black = "^23.7.0"
ruff = "^0.0.284"

[tool.poetry.scripts]
research-agent = "research_agent.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=research_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, more dependencies)",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["research_agent"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
